--- a/googleHomepage.html
+++ b/googleHomepage.html
@@ -201,6 +201,8 @@
                 <img src="votelogo.png" about="vote">
                 <a href="">Find out how to vote this election</a>
             </div>
+
+            Test change
        
     <div id="test">
         <div id="bottom-left-links">
