--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
 <!DOCTYPE html>
+
+<html>
+
+<head>
+
+    <title>Frontend Mentor</title>
+
+</head>
+
+<body>
+
+    <h1>10,000+ of our users love our products.</h1>
+    
+    <p> We only provide great products combined with excellent customer service.
+        See what our satisified customers are saying about our services.
+    </p>
+
+</body>
+
+</html>
