--- a/index.html
+++ b/index.html
@@ -11,10 +11,44 @@
 <body>
 
     <h1>10,000+ of our users love our products.</h1>
-    
+
     <p> We only provide great products combined with excellent customer service.
         See what our satisified customers are saying about our services.
     </p>
+
+
+
+<div>
+    <div>
+         <p>"We needed the same printed design as the one we had ordered
+        a week prior. Not only did they find the original order, but 
+        we also recieved it in time. Excellent!"
+     </p>
+    </div>
+
+    <div>
+        <p>"Customer service is always excellent and ver quick turn around.
+            Completely delighted with the simplicity of the purchase and 
+            the speed of delivery."
+        </p>
+    </div>
+
+    <div>
+        <p>"Put an order with this company and can only praise them for the 
+            very high standard. Will definitely use them again and recommend
+            them to everyone!"
+        </p>
+    </div>
+</div>
+
+
+<div>
+    <div>
+        <p>Rated 5 stars in Reviews</p>
+    </div>
+
+
+</div>
 
 </body>
 
