--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
     <title>Frontend Mentor</title>
 
+    <link href="style.css" style="text/css">
+
 </head>
 
 <body>
@@ -46,6 +48,13 @@
     <div>
         <p>Rated 5 stars in Reviews</p>
     </div>
+    <div>
+        <p>Rated 5 Stars in Report Guru</p>
+    </div>
+    <div>
+        <p>Rated 5 Stars in BestTech</p>
+    </div>
+</div>
 
 
 </div>
