--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-testtesttest
+headheadheadhead
     <title>Frontend Mentor</title>
 
     <link href="style.css" style="text/css">
