--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <head>
 
     <title>Frontend Mentor</title>
+    <link href="https://fonts.googleapis.com/css2?family=Spartan&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
 
