--- a/index.html
+++ b/index.html
@@ -13,51 +13,54 @@
 
 <body>
 
-<div id="header-main">    
-    <h1>10,000+ of our users love our products.</h1>
+<div class="container">
+    <div id="header-main">    
+          <h1>10,000+ of our users love our products.</h1>
 
-    <p id="header"> We only provide great products combined with excellent customer service.
+         <p id="header"> We only provide great products combined with excellent customer service.
         See what our satisified customers are saying about our services.
-    </p>
-<div>
+         </p>
+   </div>
+
+    <div id="Ratings-Group">
+        <div class="Rating-1">
+            <p>Rated 5 stars in Reviews</p>
+        </div>
+        <div class="Rating-2">
+            <p>Rated 5 Stars in Report Guru</p>
+        </div>
+        <div class="Rating-3">
+            <p>Rated 5 Stars in BestTech</p>
+         </div>
+    </div>
+</div>   
 
 
 
-<div class="Customers">
-    <div id="Customer-1">
-         <p>"We needed the same printed design as the one we had ordered
+    <div class="Customers">
+         <div id="Customer-1">
+           <p>"We needed the same printed design as the one we had ordered
         a week prior. Not only did they find the original order, but 
         we also recieved it in time. Excellent!"
-     </p>
-    </div>
+             </p>
+          </div>
 
-    <div id="Customer-2">
-        <p>"Customer service is always excellent and ver quick turn around.
+          <div id="Customer-2">
+               <p>"Customer service is always excellent and ver quick turn around.
             Completely delighted with the simplicity of the purchase and 
             the speed of delivery."
-        </p>
-    </div>
+              </p>
+          </div>
 
-    <div id="Customer-3">
-        <p>"Put an order with this company and can only praise them for the 
+          <div id="Customer-3">
+               <p>"Put an order with this company and can only praise them for the 
             very high standard. Will definitely use them again and recommend
             them to everyone!"
-        </p>
+               </p>
+          </div>
     </div>
-</div>
 
 
-<div class="Ratings-Group">
-    <div id="Rating-1">
-        <p>Rated 5 stars in Reviews</p>
-    </div>
-    <div id="Rating-2">
-        <p>Rated 5 Stars in Report Guru</p>
-    </div>
-    <div id="Rating-3">
-        <p>Rated 5 Stars in BestTech</p>
-    </div>
-</div>
 
 
 
