HTML/CSS refinement

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 
     <title>Frontend Mentor</title>
-    <link href="https://fonts.googleapis.com/css2?family=Spartan&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
 
@@ -19,7 +19,7 @@
 
     <div class="container">
      <div id="header-main">    
-          <h1>10,000+ of our users love our products.</h1>
+          <h1 id="header-header"><b>10,000+ of our users love our products.</b></h1>
 
          <p id="header"> We only provide great products combined with excellent customer service.
         See what our satisified customers are saying about our services.
@@ -59,6 +59,13 @@
 
     <div class="Customers">
          <div id="Customer-1">
+            <div class="group">
+             <img src="image-colton.jpg" about="colton" width="20%">
+             <p class="name">Colton Smith</p>
+            </div>
+            <div class="verified-buyer">
+            <p>Verified Buyer</p>  
+            </div>
              <p>"We needed the same printed design as the one we had ordered
                a week prior. Not only did they find the original order, but 
                we also recieved it in time. Excellent!"
@@ -66,6 +73,13 @@
           </div>
 
           <div id="Customer-2">
+              <div class="group">
+              <img src="image-irene.jpg" about="Irene" width="20%">
+              <p class="name">Irene Roberts</p>
+              </div>
+              <div class="verified-buyer">
+                <p>Verified Buyer</p>  
+                </div>
                <p>"Customer service is always excellent and ver quick turn around.
                   Completely delighted with the simplicity of the purchase and 
                    the speed of delivery."
@@ -73,6 +87,13 @@
           </div>
 
           <div id="Customer-3">
+              <div class="group">
+              <img src="image-anne.jpg" about="anne" width="20%">
+              <p class="name">Anne Wallace</p>
+              </div>
+              <div class="verified-buyer">
+                <p>Verified Buyer</p>  
+                </div>
                <p>"Put an order with this company and can only praise them for the 
                  very high standard. Will definitely use them again and recommend
                  them to everyone!"
