--- a/HTML_CSSchallenge4/index.html
+++ b/HTML_CSSchallenge4/index.html
@@ -3,6 +3,8 @@
 <html>
     <head>
    <title>Join our Community</title>
+   <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
     </head>
 
     <link rel="stylesheet" href="style.css">
@@ -11,21 +13,31 @@
     <div id="container">
         <section class="column">
             <div id="col-1">
-                <h1></h1>
-                <h2></h2>
-                <p></p>
+                <h1 class="text header-1">Join our community</h1>
+                <h2 class="text header-2"> 30-day, hassle-free money back guarantee</h2>
+                <p class="text">Gain access to our full library of tutorials 
+                    along with expert code reviews.<br>Perfect for any developers who are serious about honing their skills<br></p>
             </div>
         </section>
 
         <aside class="column">
             <div id="col-2">
-                <h1></h1>
-                <p></p>
-                <p></p>
+                <h1 class="text text-col-2">Monthly Subscription</h1>
+                <p class="text"><span style="color:hsl(204, 43%, 93%); font-size: 25px;">$29</span> per month</p>
+                <p class="text text-col-2">Full access for less than $1 a day</p>
+                <button>Sign Up</button>
             </div>
             <div id="col-3">
-                <h1></h1>
-                <p></p>
+                <h1 class="text text-col-3">Why Us</h1>
+                     <ul class="text text-col-li">
+                         <li>Tutorials by industry experts</li>
+                         <li>Peer & expert code review</li>
+                         <li>Coding exercises</li>
+                         <li>Access to our Github repos</li>
+                         <li>Community forum</li>
+                         <li>Flashcard decks</li>
+                         <li>New videos every week</li>
+                     </ul>
             </div>
         </aside>
     </div>
