--- a/HTML_CSSchallenge4/index.html
+++ b/HTML_CSSchallenge4/index.html
@@ -3,13 +3,14 @@
 <html>
     <head>
    <title>Join our Community</title>
+   <meta content="width=device-width, initial-scale=1" name="viewport" />
    <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
     </head>
 
     <link rel="stylesheet" href="style.css">
 
-    <body>
+<body>
     <div id="container">
         <section class="column">
             <div id="col-1">
@@ -29,17 +30,17 @@
             </div>
             <div id="col-3">
                 <h1 class="text text-col-3">Why Us</h1>
-                     <ul class="text text-col-li">
-                         <li>Tutorials by industry experts</li>
-                         <li>Peer & expert code review</li>
-                         <li>Coding exercises</li>
-                         <li>Access to our Github repos</li>
-                         <li>Community forum</li>
-                         <li>Flashcard decks</li>
-                         <li>New videos every week</li>
-                     </ul>
+                  
+                         <p class="text text-col-li">Tutorials by industry experts<br>
+                         Peer & expert code review<br>
+                         Coding exercises<br>
+                         Access to our Github repos<br>
+                         Community forum<br>
+                         Flashcard decks<br>
+                         New videos every week</p>
+                     
             </div>
         </aside>
     </div>
-    </body>
+</body>
 </html>
