javascript edu / challenge

--- a/Javascript2/index.html
+++ b/Javascript2/index.html
@@ -8,6 +8,23 @@
     <script src="home.js">
         
     </script>
+
+    <script>
+      let students =  `[
+    {
+        "name": "Alex",
+        "age": 29,
+        "height": 179
+    },
+    {
+        "name": "Alex",
+        "age": 25,
+        "height": 189
+    }
+]`
+
+        console.log(JSON.parse(students)[0].age);
+    </script>
    
    <h1 id="someText">
         Hey there
